unpackaged/main/default/objects/sked_Staffing_Constraint__c/fields/sked_Additional_Slots__c.field-meta.xml
<CustomField>
    <fullName>sked_Additional_Slots__c</fullName>
    <label>Additional Slots</label>
    <summaryFilterItems>
        <field>sked_Staffing_Constraint_RO__c.sked_Add_To_Staffing_Constraint__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>sked_Staffing_Constraint_RO__c.sked_Staffing_Constraint__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>