unpackaged/main/default/objects/sked_Staffing_Constraint__c/fields/sked_Date_of_Constraint__c.field-meta.xml
<CustomField>
    <fullName>sked_Date_of_Constraint__c</fullName>
    <label>Date of Constraint</label>
    <type>Date</type>
</CustomField>