unpackaged/main/default/objects/sked_Staffing_Constraint__c/fields/sked_Decrease_Indicator__c.field-meta.xml
<CustomField>
    <fullName>sked_Decrease_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decrease Indicator</label>
    <type>Checkbox</type>
</CustomField>