unpackaged/main/default/objects/sked_Staffing_Constraint__c/fields/sked_Num_Available_Staff__c.field-meta.xml
<CustomField>
    <fullName>sked_Num_Available_Staff__c</fullName>
    <formula>sked_Total_Staff_Constraints__c + sked_Additional_Slots__c - sked_Reduced_Slots__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num Available Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>