unpackaged/main/default/objects/sked_Staffing_Constraint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sked_Collection_Operation__c</columns>
    <columns>sked_Date_of_Constraint__c</columns>
    <columns>sked_Drive_Type__c</columns>
    <columns>sked_Total_Staff_Constraints__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>